--- a/package.json
+++ b/package.json
@@ -50,6 +50,10 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.1.8"
+    "autoprefixer": "^10.4.13",
+    "npx": "^10.2.2",
+    "postcss": "^8.4.18",
+    "svelte-preprocess": "^4.10.7",
+    "tailwindcss": "^3.2.2"
   }
 }
